# fake_device

./: CMakeLists.txt  Makefile  README.md  build.sh
client/: CMakeLists.txt  Makefile  client.cpp
proto/: CMakeLists.txt  Makefile  command.cpp  command.h  command_get_result.cpp  command_get_result.h  command_get_status.cpp  command_get_status.h  command_id.h  command_set_range.cpp  command_set_range.h  command_start_measure.cpp  command_start_measure.h  command_stop_measure.cpp  command_stop_measure.h  proto.cpp  proto.h
qml_client/: CMakeLists.txt  channel.qml  channelhandler.cpp  channelhandler.h  main.cpp  main.qml  qml.qrc
server/: CMakeLists.txt  Makefile  logger.cpp  logger.h  meas_channel.cpp  meas_channel.h  server.cpp  server.h  server_app.cpp
